@@ -20,6 +20,7 @@ static int _vgmerge_single(struct cmd_context *cmd, const char *vg_name_to,
 {
 	struct volume_group *vg_to, *vg_from;
 	struct lv_list *lvl1, *lvl2;
+	struct pv_list *pvl;
 	int active;
 	int consistent = 1;
 
@@ -119,6 +120,25 @@ static int _vgmerge_single(struct cmd_context *cmd, const char *vg_name_to,
 					  name1, vg_to->name, vg_from->name);
 				goto error;
 			}
+		}
+	}
+
+	/* Check no PVs are constructed from either VG */
+	list_iterate_items(pvl, &vg_to->pvs) {
+		if (pv_uses_vg(cmd, pvl->pv, vg_from)) {
+			log_error("Physical volume %s might be constructed "
+				  "from same volume group %s.",
+				  dev_name(pvl->pv->dev), vg_from->name);
+			goto error;
+		}
+	}
+
+	list_iterate_items(pvl, &vg_from->pvs) {
+		if (pv_uses_vg(cmd, pvl->pv, vg_to)) {
+			log_error("Physical volume %s might be constructed "
+				  "from same volume group %s.",
+				  dev_name(pvl->pv->dev), vg_to->name);
+			goto error;
 		}
 	}
 
